logs/application.log
[2024-07-02T13:19:02.029] [INFO] application - Application listening at :3000
[2024-07-02T13:31:16.795] [INFO] application - Application listening at :3000
[2024-07-02T13:31:35.355] [ERROR] application - Command failed: C:/home/python3111x64/python.exe  ./app/gmsh/stl2png.py  ./png2stl.stl
Traceback (most recent call last):
  File "C:\Users\uyasp\Desktop\Node.js\Express.js\png2stl.js\app\gmsh\stl2png.py", line 14, in <module>
    from stl import mesh
ModuleNotFoundError: No module named 'stl'

[2024-07-02T13:35:19.302] [INFO] application - Application listening at :3000
[2024-07-02T13:35:31.287] [ERROR] application - Command failed: C:/home/python3111x64/python.exe  ./app/gmsh/stl2png.py  ./png2stl.stl
Traceback (most recent call last):
  File "C:\Users\uyasp\Desktop\Node.js\Express.js\png2stl.js\app\gmsh\stl2png.py", line 14, in <module>
    from stl import mesh
ModuleNotFoundError: No module named 'stl'

[2024-07-02T13:36:00.520] [ERROR] application - Command failed: C:/home/python3111x64/python.exe  ./app/gmsh/stl2png.py  ./png2stl.stl
Traceback (most recent call last):
  File "C:\Users\uyasp\Desktop\Node.js\Express.js\png2stl.js\app\gmsh\stl2png.py", line 14, in <module>
    from stl import mesh
ModuleNotFoundError: No module named 'stl'

[2024-07-02T13:37:15.538] [INFO] application - Application listening at :3000
[2024-07-02T13:40:13.898] [INFO] application - Application listening at :3000
[2024-07-02T13:40:36.673] [ERROR] application - Command failed: C:/home/python3111x64/python.exe  ./app/gmsh/stl2png.py  ./png2stl.stl
Traceback (most recent call last):
  File "C:\Users\uyasp\Desktop\Node.js\Express.js\png2stl.js\app\gmsh\stl2png.py", line 116, in <module>
    main()
  File "C:\Users\uyasp\Desktop\Node.js\Express.js\png2stl.js\app\gmsh\stl2png.py", line 53, in main
    mesh_stl = mesh.Mesh.from_file(path_stl)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\home\python3111x64\Lib\site-packages\stl\stl.py", line 389, in from_file
    with open(filename, 'rb') as fh:
         ^^^^^^^^^^^^^^^^^^^^
FileNotFoundError: [Errno 2] No such file or directory: 'C:/Users/uyasp/Desktop/Node.js/Express.js/png2stl.js/app/gmsh/png2stl.stl'

[2024-07-02T13:52:38.530] [INFO] application - Application listening at :3000
[2024-07-02T13:53:02.530] [ERROR] application - ENOENT: no such file or directory, copyfile 'C:\Users\uyasp\Desktop\Node.js\Express.js\png2stl.js\Lenna-WB.png' -> 'C:\Users\uyasp\Desktop\Node.js\Express.js\png2stl.js\app\gmsh\png2stl_Mesh.stl'
[2024-07-02T13:55:04.337] [INFO] application - Application listening at :3000
[2024-07-02T14:00:13.569] [INFO] application - Application listening at :3000
[2024-07-02T14:06:46.610] [INFO] application - Application listening at :3000
[2024-07-02T14:14:21.900] [INFO] application - Application listening at :3000
[2024-07-02T14:44:10.961] [INFO] application - Application listening at :3000
[2024-07-02T14:44:43.115] [ERROR] application - Command failed: C:/home/python3111x64/python.exe  ./app/gmsh/png2stl.py  ./Lenna-WB.png
  File "C:\Users\uyasp\Desktop\Node.js\Express.js\png2stl.js\app\gmsh\png2stl.py", line 163
    os.remove(path_png_cntr')
                           ^
SyntaxError: unterminated string literal (detected at line 163)

[2024-07-02T14:47:00.852] [INFO] application - Application listening at :3000
[2024-07-02T14:49:16.368] [ERROR] application - Command failed: C:/home/python3111x64/python.exe  ./app/gmsh/png2stl.py  ./Lenna-WB.png
  File "C:\Users\uyasp\Desktop\Node.js\Express.js\png2stl.js\app\gmsh\png2stl.py", line 163
    os.remove(path_png_cntr')
                           ^
SyntaxError: unterminated string literal (detected at line 163)

[2024-07-02T14:52:46.559] [ERROR] application - Command failed: C:/home/python3111x64/python.exe  ./app/gmsh/png2stl.py  ./Lenna-WB.png
  File "C:\Users\uyasp\Desktop\Node.js\Express.js\png2stl.js\app\gmsh\png2stl.py", line 169
    os.remove(path_png_cntr')
                           ^
SyntaxError: unterminated string literal (detected at line 169)

[2024-07-02T15:01:43.658] [INFO] application - Application listening at :3000
